--- a/Collaby/src/styles.css
+++ b/Collaby/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
 }
 
@@ -25,6 +25,7 @@ a {
 
 a.logo {
     font-weight: bold;
+    font-size: 22px;
 }
 
 nav {
